fix photo size on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,9 +21,7 @@ body {
 
 @media (max-width: 575.98px) and (max-width: 767.98px){
     #my-photo {
-        padding-left: 0.8em;
-        height: 25em;
-        opacity: 0.85;
+        width: 15em;
     }
 }
 
